--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 html, body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Poppins", sans-serif;
     margin: 0;
     padding: 0;
 }
 main{
     margin-left: 5%;
     margin-right: 5%;
+    margin-bottom: 5%;
 }
 
 a{
@@ -15,6 +16,8 @@ a{
 ul, ol{
     display: flex;
     list-style: none;
+    
+    align-items: center;
 }
 nav ul{
     gap: 32px;   
@@ -46,7 +49,7 @@ nav{
 }
 
 .button:hover{
-    transform: scale(110%);
+    transform: scale(90%);
 }
 .button img{
     height: 16px;
@@ -54,7 +57,7 @@ nav{
     object-fit: contain;
 }
 .button a{
-    color: black;
+    color: white;
 }
 
 div{
@@ -81,20 +84,40 @@ div{
     align-items: center;
     gap: 16px
 }
-.presentation #Photomoi{
+.presentation #djembe{
     object-fit: contain;
+    height: 450px;
+}
+.details{
+    flex-direction: column;
+}
+.details h2{
+    margin: 0;
+}
+.details p{
+    margin-top: 10px;
 }
 
 .shop{
     display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+    gap: 8px;
+}
+.plus{
+    display: flex;
+    margin-top: 2%;
+    justify-content: center;
 }
 .card{
     display: flex;
     flex-direction: column;
     box-shadow: 0px 5px 5px #C5C5C5 ;
     border-radius: 16px;
-    height: 400px;
-    width: 550px;
+    height: 420px;
+    width: 500px;
 }
 
 .card div{
@@ -102,7 +125,7 @@ div{
 }
 .card img{
     height: 250px;
-    width: 550px;
+    width: 500px;
     border-radius: 16px 16px 0px 0px;
 }
 .card span{
@@ -111,19 +134,73 @@ div{
 }
 .card p{
     display: flex;
-    width: 400pX;
     margin: 0;
 }
 .card a img{
     height: 32px;
     width: 32px;
-    object-fit: cover;
 }
 
+#services{
+    display: flex;
+    align-items: center ;
+    flex-wrap: wrap;
+    color: white;
+    font-weight: bold;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    padding: 5%;
+    background-image:url(assets/images/concert.png);
+    border-radius: 16px;
+}
+#services div{
+    align-items: center;
+    justify-content: center;
+}
+.services{    
+    flex-direction: column;
+    align-items: center;
+}
+.services div{
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+}
+.services {
+    background-color: #ffffff75;
+    color: black;
+    padding: 2%;
+    border-radius: 16px;
+}
+.notes-container{   
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 32px;
+}
+.clients{
+    background: #D9D9D9;
+    padding: 20px;
+    height: 350px;
+    width: 250px;
+}
+.clients:hover{
+    transform: scale(105%);
+}
+.clients img{
+    height: 100px;
+    width: fit-content;
+    object-fit: contain;
+}
 
 footer{
     display: flex   ;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background: #D9D9D9;
+}
+
+footer ul{
+    gap: 8px;
+    margin-bottom: 0;
 }
