--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ nav{
     display: flex;  
     align-items: center;
     height: fit-content;
+    transition: transform 0.2s ease;
     background: black;
     border-radius: 32px;
     padding: 8px 16px;
@@ -78,6 +79,7 @@ div{
     display: flex;
     justify-content: space-evenly;
     align-items: center ;
+    margin-bottom: 10%;
 }
 .presentation ul{
     display: flex;
@@ -96,6 +98,7 @@ div{
 }
 .details p{
     margin-top: 10px;
+    margin-bottom: 50px;
 }
 
 .shop{
@@ -179,6 +182,7 @@ div{
 }
 .clients{
     background: #D9D9D9;
+    transition: transform 0.2s ease;
     padding: 20px;
     height: 350px;
     width: 250px;
