--- a/style.css
+++ b/style.css
@@ -34,7 +34,9 @@ nav{
     background: #D9D9D9;
     padding-top: 8px;
 }
-
+.navlink:hover{
+    color: rgb(60, 60, 60);
+}
 .button{
     display: flex;  
     align-items: center;
@@ -107,7 +109,7 @@ div{
     flex-wrap: wrap;
     margin: 0;
     padding: 0;
-    gap: 8px;
+    gap: 32px;
 }
 .plus{
     display: flex;
